--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+health.js
+Login interval.js
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
